# CoMP

./: CMakeLists.txt  CoMP.cpp  CoMP.hpp  Symbols.hpp  buffer.hpp  cpu_attach.cpp  main.cpp  packageReceiver.cpp  packageReceiver.hpp  packageSender.cpp  packageSender.hpp  radio_lib.cpp  radio_lib.hpp  receiver_cli.cpp  sender_cli.cpp  testTranspose.cpp
